# JoyConToXbox

./: .gitignore  CMakeLists.txt  LICENSE  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  main.c
main/ble_hid/: ble_hid.c  ble_hid.h
main/common/: ble_uuid.h
main/joycon/: joycon_constants.h  joycon_manager.c  joycon_manager.h  joycon_parser.c  joycon_parser.h  joycon_types.h
main/joycon/bt_classic/: joycon_bt_classic.c  joycon_bt_classic.h  joycon_bt_classic_connection.c  joycon_bt_classic_connection.h  joycon_bt_classic_discovery.c  joycon_bt_classic_discovery.h  joycon_bt_classic_internal.h  joycon_bt_classic_l2cap.c  joycon_bt_classic_l2cap.h  joycon_bt_classic_scan.c  joycon_bt_classic_state.c  joycon_bt_classic_state.h
main/status/: status_led.c  status_led.h
main/xbox/: xbox_emulator.c  xbox_emulator.h  xbox_hid_descriptor.h
